# mypyc-task

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yml
mypyc_task/: __about__.py  futures.py  tasks.py
tests/: __init__.py
